@@ -1,3 +1,13 @@
+2006-03-02 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/FrameVisualDisk.h,
+	  src/FrameVisualDisk.cc: improved the algorithm to deal with lost
+	  pixels after seeing some problems with rather insane
+	  partitiontables.
+	* src/Dialog_Partition_Info.cc: minor cleanup
+	* src/GParted_Core.cc: show error in partitioninfo if statvfs fails
+	* src/TreeView_Detail.cc: added FIXME
+	
 2006-03-01 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/Dialog_Base_Partition.cc,
